--- a/wp-plugin/src/package.json
+++ b/wp-plugin/src/package.json
@@ -16,6 +16,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^1.1.0",
     "matchdep": "^0.3.0"
   }
 }
